// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button
    width=\\"100px\\"
    size=\\"md\\"
    backgroundColor=\\"#f1f5f9\\"
    color=\\"#000\\"
    isDisabled={false}
  >
    {'Submit'}
  </Button>
</Frame>;
"
`;

exports[`card with no border radius on image default 1`] = `
"<Frame width={300} height={400}>
  <Flex
    width=\\"300px\\"
    height=\\"400px\\"
    className=\\"flex-col bg-white p-4 shadow rounded-md\\"
  >
    <Image
      src=\\"https://placekitten.com/300/300\\"
      fit=\\"cover\\"
      align=\\"middle\\"
      minHeight={0}
      className=\\"rounded-none flex-1\\"
    />
    <Flex>
      <Heading flex=\\"1\\" size=\\"sm\\" lineHeight=\\"1.3\\" className=\\"mt-4\\">
        {'News'}
      </Heading>
    </Flex>
    <Text className=\\"mt-1\\">
      {'Here you can explore the latest news and information.'}
    </Text>
  </Flex>
</Frame>;
"
`;

exports[`generate file base 1`] = `
Object {
  "App.tsx": "import { Box } from '@chakra-ui/react';

import * as React from 'react';

function Frame(props: React.ComponentProps<typeof Box>) {
  return <Box pos=\\"absolute\\" {...props} />;
}

function App() {
  return <></>;
}
export { App };
",
  "package.json": "{
  \\"name\\": \\"app\\",
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"@chakra-ui/icons\\": \\"^2\\",
    \\"@chakra-ui/react\\": \\"^1\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\"
  }
}",
}
`;

exports[`hero default 1`] = `
"<Frame width={400} height={400}>
  <Flex
    width=\\"400px\\"
    height=\\"400px\\"
    className=\\"flex-col bg-transparent p-4 gap-3 items-center justify-center\\"
  >
    <Flex>
      <Heading flex=\\"1\\" size=\\"xl\\" lineHeight=\\"1.3\\" textAlign=\\"center\\">
        {'Create, iterate, inspire.'}
      </Heading>
    </Flex>
    <Text className=\\"mb-4\\" textAlign=\\"center\\">
      {'Turn great ideas into new possibilities.'}
    </Text>
    <Flex className=\\"bg-transparent flex-row items-center gap-6\\">
      <Button
        size=\\"md\\"
        backgroundColor=\\"#15803d\\"
        color=\\"#fff\\"
        isDisabled={false}
      >
        {'Get started'}
      </Button>
    </Flex>
  </Flex>
</Frame>;
"
`;

exports[`hero left aligned default 1`] = `
"<Frame width={400} height={400}>
  <Flex
    width=\\"400px\\"
    height=\\"400px\\"
    className=\\"flex-col bg-transparent p-4 gap-3 items-start justify-center\\"
  >
    <Flex>
      <Heading flex=\\"1\\" size=\\"xl\\" lineHeight=\\"1.3\\" textAlign=\\"left\\">
        {'Create, iterate, inspire.'}
      </Heading>
    </Flex>
    <Text className=\\"mb-4\\" textAlign=\\"left\\">
      {'Turn great ideas into new possibilities.'}
    </Text>
    <Flex className=\\"bg-transparent flex-row items-center gap-6\\">
      <Button
        size=\\"md\\"
        backgroundColor=\\"#15803d\\"
        color=\\"#fff\\"
        isDisabled={false}
      >
        {'Get started'}
      </Button>
    </Flex>
  </Flex>
</Frame>;
"
`;

exports[`hero with bg default 1`] = `
"<Frame width={400} height={400}>
  <Flex
    width=\\"400px\\"
    height=\\"400px\\"
    className=\\"flex-col bg-blue-500 p-4 gap-3 items-center justify-center\\"
  >
    <Flex>
      <Heading
        flex=\\"1\\"
        size=\\"xl\\"
        lineHeight=\\"1.3\\"
        className=\\"text-white\\"
        textAlign=\\"center\\"
      >
        {'Create, iterate, inspire.'}
      </Heading>
    </Flex>
    <Text className=\\"mb-4 text-white\\" textAlign=\\"center\\">
      {'Turn great ideas into new possibilities.'}
    </Text>
    <Flex className=\\"bg-transparent flex-row items-center gap-6\\">
      <Button
        size=\\"md\\"
        backgroundColor=\\"#f1f5f9\\"
        color=\\"#000\\"
        isDisabled={false}
        className=\\"text-white\\"
      >
        {'Get started'}
      </Button>
    </Flex>
  </Flex>
</Frame>;
"
`;

exports[`icon default 1`] = `
"<Frame width={48} height={48}>
  <Image
    src=\\"https://api.iconify.design/material-symbols/menu.svg\\"
    fit=\\"contain\\"
    align=\\"middle\\"
    w=\\"100%\\"
    h=\\"100%\\"
  />
</Frame>;
"
`;

exports[`icon with color 1`] = `
"<Frame width={48} height={48}>
  <Box
    w=\\"100%\\"
    h=\\"100%\\"
    backgroundColor=\\"#60a5fa\\"
    style={{
      maskImage:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
      WebkitMask:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
    }}
  />
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text className=\\"text-red-500\\" textAlign=\\"center\\">
    {'Hello world'}
  </Text>
</Frame>;
"
`;
